--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "vant": "^4.0.10",
     "vue": "^3.2.45"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
+    "lib-flexible": "^0.3.2",
+    "postcss-pxtorem": "^6.0.0",
     "typescript": "^4.9.3",
+    "unplugin-vue-components": "^0.23.0",
     "vite": "^4.1.0",
     "vue-tsc": "^1.0.24"
   }
