--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.3.4",
+    "dayjs": "^1.11.7",
+    "nprogress": "^0.2.0",
     "pinia": "^2.0.30",
     "sass": "^1.58.0",
     "vant": "^4.0.10",
@@ -16,6 +19,7 @@
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
+    "@types/nprogress": "^0.2.0",
     "@vitejs/plugin-vue": "^4.0.0",
     "lib-flexible": "^0.3.2",
     "postcss-pxtorem": "^6.0.0",
