--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vant/area-data": "^1.4.1",
     "axios": "^1.3.4",
     "dayjs": "^1.11.7",
     "nprogress": "^0.2.0",
