--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
   "devDependencies": {
     "@types/nprogress": "^0.2.0",
     "@vitejs/plugin-vue": "^4.0.0",
+    "autoprefixer": "^10.4.14",
     "lib-flexible": "^0.3.2",
+    "postcss": "^8.4.21",
     "postcss-pxtorem": "^6.0.0",
+    "tailwindcss": "^3.3.1",
     "typescript": "^4.9.3",
     "unplugin-vue-components": "^0.23.0",
     "vite": "^4.1.0",
